--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.LoginActivity"
             android:launchMode="singleTask"
             android:exported="true">
             <intent-filter>
@@ -29,25 +29,25 @@
         </activity>
 
         <activity
-            android:name=".EnregistrementActivity"
+            android:name=".activity.EnregistrementActivity"
             />
 
 
 
         <activity
-            android:name=".ConfigActivity"
+            android:name=".activity.ConfigActivity"
             />
 
         <activity
-            android:name=".PayConfirmActivity"
+            android:name=".activity.PayConfirmActivity"
             />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             />
 
         <activity
-            android:name=".PayRechercheActivity"
+            android:name=".activity.PayRechercheActivity"
             />
 
 
