--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
@@ -28,30 +29,27 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".activity.EnregistrementActivity"
-            />
+        <activity android:name=".activity.EnregistrementActivity" />
 
 
+        <activity android:name=".activity.ConfigActivity" />
 
-        <activity
-            android:name=".activity.ConfigActivity"
-            />
+        <activity android:name=".activity.PayConfirmActivity" />
 
-        <activity
-            android:name=".activity.PayConfirmActivity"
-            />
+        <activity android:name=".activity.MainActivity" />
 
-        <activity
-            android:name=".activity.MainActivity"
-            />
-
-        <activity
-            android:name=".activity.PayRechercheActivity"
-            />
+        <activity android:name=".activity.PayRechercheActivity" />
 
 
-
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
 
     </application>
