--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
 
         <activity android:name=".activity.MainActivity" />
 
+        <activity android:name=".activity.ChoiceActivity" />
+
         <activity android:name=".activity.PayRechercheActivity" />
 
 
